2008-05-09  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstsegment.c:
	* tests/check/gst/gstsegment.c:
	  No, let's not use g_slice_{dup|copy} here, since they only exist
	  since GLib 2.14 and we still depend only on >= 2.12. Also add
	  unit test for gst_segment_copy().

2008-05-09  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstutils.h: (GST_BOILERPLATE_FULL):
	  Try to fix 'dereferencing type-punned pointer will break strict
	  aliasing rules' warnings with C++ compilers and GLib >= 2.14.0: GLib
	  changed the default GType typedef from gulong to gsize at some point,
	  but kept GType typedef'ed to gulong for C++ for ABI reasons; the
	  g_once_* functions all take a gsize * though, so work around the type
	  mismatch for C++ by doing everything in gsize and casting to GType
	  later.

2008-05-09  Jan Schmidt  <jan.schmidt@sun.com>

	* plugins/elements/gstmultiqueue.c:
	Add documentation for the signals to push our core plugin docs
	coverage back up to 100%.

2008-05-08  Ole André Vadla Ravnås  <ole.andre.ravnas at tandberg com>

	* gst/gstinfo.h (GST_FUNCTION):
	  Reverted GST_FUNCTION to the old version as we don't want the
	  full signature in C++ code. Also added support for MSVC.

2008-05-08  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstutils.h:
	Intern the type name string, similar to what G_DEFINE_TYPE does.

2008-05-08  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/gstutils.h:
	Make GST_BOILERPLATE thread-safe if building with GLib 2.14 or newer.

2008-05-08  Sebastian Dröge  <slomo@circular-chaos.org>

	Based on a patch by: Sjoerd Simons <sjoerd at luon dot net>

	* libs/gst/base/gstbasetransform.c:
	(gst_base_transform_buffer_alloc):
	Don't passthrough buffer allocation too easily if the caps change.
	This breaks when working in passthrough mode and upstream changes
	it's caps. Fixes bug #526768.

2008-05-07  Ole André Vadla Ravnås  <ole.andre.ravnas at tandberg com>
